# FixaTons

./: .gitignore  .pre-commit-config.yaml  FixaTons.py  LICENSE  README.md  Tutorial.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
FixaTons/: __init__.py  __main__.py  cli.py  dataset_utils.py
FixaTons/data/: __init__.py  info.py  loader.py
FixaTons/metrics/: __init__.py  saliency.py  scanpath.py
FixaTons/stats/: __init__.py  compute.py
FixaTons/visualization/: __init__.py  display.py
docs/: contributing-datasets.md
docs/tutorials/: README.md
tests/: test_basic.py  test_metrics.py
